2008-02-21  Karl Berry  <karl@gnu.org>

	* pretest 4.11.90.

	* install-info/tests/ii-0041-test,
	* install-info/tests/ii-0041-test: ensure target dir file is rw.

2008-02-19  Karl Berry  <karl@gnu.org>

	* info/infodoc.c (info_internal_help_text): rearrangements.
	* info/session.c (cursor_movement_scrolls_p): 1 by default.
	* info/window.c (window_scroll_step): 1 by default.
	* info/infomap.c <key bindings>: h to info_get_help_window,
	H to info_get_info_help_node,
	PgUp to info_scroll_backward, PgDown to info_scroll_forward,
	move q to after C-x C-c .
	Suggestions from Benno Schulenberg, 04 Jan 2008 23:20:46.

2008-02-17  Karl Berry  <karl@gnu.org>

	* util/texi2dvi (EGREP): need egrep early.

	* util/texi2dvi: path_sep is : on djgpp too.  From Eli Z.

	* makeinfo/makeinfo.c: typos in comments.
	
	* makeinfo/cmds.c (cm_direntry): call close_single_paragraph,
	instead of add_char('\n'), or the INFO-DIR-SECTION lines from two
	consecutive @dircategory's are munged together.
	Bug report from Ralf Angeli, 16 Feb 2008 18:59:42.

2008-02-16  Karl Berry  <karl@gnu.org>

	* util/texi2dvi: path_sep is : on mingw as well as cygwin.
	Report from: FX Coudert, 16 Feb 2008 15:43:15.

	* makeinfo/cmds.c (cm_cite): avoid double apostrophe in
	Info output of, e.g., ... @cite{Foo}'s ...
	Report from Bob Chassell.

2008-02-15  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\tex): spurious space in redefinition of \top.

	* makeinfo/cmds.c (handle_include): set in_fixed_width_font
	for expanding the filename argument, so -- doesn't become -.
	Bug report from Daniel Richard G., 13 Feb 2008 01:50:00.

2008-02-11  Karl Berry  <karl@gnu.org>

	* info/session.c (incremental_search): if a regex search,
	search every time through the loop, not only if the search
	succeeded.
	Bug report from Ralf Wildenhues, 8 Feb 2008 23:30:51.

2008-02-10  Karl Berry  <karl@gnu.org>

	* info/session.c (show_isearch_prompt): Start with "Regexp" if
	it's a regexp i-search.